--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
             <div class="video-container">
                 <video controls>
-                    <source src="Video_IAG.mp4" type="video/mp4">
+                    <source src="Video_IAG.MP4" type="video/mp4">
                     Tu navegador no soporta el elemento de video.
                 </video>
             </div>
