--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             color: #2e3eb5;
             margin-bottom: 20px;
         }
-        .content {
+        .contenido {
             display: flex;
             align-items: center;
             justify-content: space-between;
         }
-        .description {
+        .descripcion {
             width: 40%;
             font-size: 1em;
             color: black;
@@ -54,13 +54,13 @@
         <div class="header">
             TODO VIAJES
         </div>
-        <div class="content">
-            <div class="description">
+        <div class="contenido">
+            <div class="descripcion">
                 Esto es un párrafo para añadir una pequeña descripción del video que hay a la derecha
             </div>
             <div class="video-container">
-                <video controls>
-                    <source src="Video_IAG.MP4" type="video/mp4">
+                 <video autoplay muted loop controls>
+                    <source src="Video_IAG.mp4" type="video/mp4">
                     Tu navegador no soporta el elemento de video.
                 </video>
             </div>
