--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         </div>
         <div class="contenido">
             <div class="descripcion">
-                Esto es un párrafo para añadir una pequeña descripción del video que hay a la derecha
+                Sekonyer River - Borneo -
+                Disfruta de un agradable paseo por tierras de orangutanes
             </div>
             <div class="video-container">
                  <video autoplay muted loop controls>
